turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:38: error: ')' expected but integer literal found.
  forward(grid.length * (30 20))
                            ^HouseMany:40: error: ')' expected but '}' found.
} 
^